# upstreamer

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
bench/: Caddyfile  apache-httpd.conf  compare.sh  haproxy.cfg  nginx-1w.conf  nginx-auto.conf  upstreamer.toml
blog/upstreamer/: index.md
crates/upstreamer/: Cargo.toml
crates/upstreamer/src/: balance.rs  config.rs  discovery.rs  errors.rs  health.rs  lib.rs  main.rs  ratelimit.rs  reload.rs  route.rs  server.rs  state.rs
crates/upstreamer/src/balance/: mod.rs
e2e/: Dockerfile  run.sh
e2e/manifests/: backend.yaml
examples/: bench-backend.rs  bench.toml  kubernetes.toml  ratelimited.toml  simple.toml
src/: lib.rs  route.rs  server.rs  state.rs
src/balance/: mod.rs  round_robin.rs  weighted.rs
src/config/: mod.rs  reload.rs
src/health/: checker.rs  discovery.rs  mod.rs
src/middleware/: errors.rs  metrics.rs  mod.rs  ratelimit.rs
src/utils/: logging.rs
tests/: helpers.py
tests/e2e/: environment.py  helpers.py
tests/e2e/features/: health_failover.feature  kubernetes.feature  round_robin.feature  weighted_latency.feature
tests/e2e/kubernetes/: Dockerfile
tests/e2e/kubernetes/manifests/: upstreamer.yaml
tests/e2e/steps/: steps.py
tests/features/: config_reload.feature  kubernetes.feature  rate_limiting.feature  routing.feature
tests/kubernetes/: kind.yaml
tests/kubernetes/manifests/: upstreamer.yaml
